app/src/test/resources/programs/valid/structs/withoutCtor.exe
uct S = {
    let x: Int = 5;
    let mut y: Bool;
}

foo main() -> Int = {
    let mut eggs : S = nothing;
    eggs.x
}