app/src/test/resources/programs/invalid/variables/RedefiningConstantVariable.exe
foo main() -> Int = {
    let kConst: Bool = true;
    let kConst: Bool = true;
    0
}
